conformance/tests/gateway-invalid-route-kind.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-only-invalid-route-kind
  namespace: gateway-conformance-infra
  annotations:
    gateway-api/skip-this-for-readiness: "true"
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: InvalidRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-supported-and-invalid-route-kind
  namespace: gateway-conformance-infra
  annotations:
    gateway-api/skip-this-for-readiness: "true"
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: InvalidRoute
          - kind: HTTPRoute
